# conditional_quantile_function

./: .gitignore  .gitmodules  README.md  process_experiments.py  pyproject.toml  run_all_test.sh  run_all_train.sh
conformal/: README.md  functions.py  real_data_experiments.py  synthetic_experiments.py
experiments/: Theorem1,FFNN.ipynb  Theorem2,estimate_phi,PICNN.ipynb  Theorem2,estimate_psi,FFNN,taxi.ipynb  Theorem2,estimate_psi,FFNN.ipynb  Unregularized,PICNN.ipynb  Unregularized,SCPICNN.ipynb
notebooks/: amortized_neural_quantile_regression.ipynb  approximate_beta_u_with_mlp.ipynb  approximate_full_potential_entropic_dual.ipynb  approximate_full_potential_psi_with_approx_max.ipynb  approximate_full_potential_psi_with_approx_max_pretrain.ipynb  approximate_full_potential_psi_with_exact_max.ipynb  approximate_full_potential_slackness_phi_condition_picnn.ipynb  compare_models_parameters.ipynb  convex_potential_flow.ipynb  cpflow_toy_test.ipynb  entropic_optimal_transport_quantile_regression.ipynb  entropic_ot_quantile_regression.ipynb  epsilon_augmented_entropic_ot_quantile_regression.ipynb  fast_vector_quantile_regresion.ipynb  fast_vector_quantile_regresion_linear.ipynb  fast_vector_quantile_regresion_non_linear.ipynb  fnlvqr_datasets.ipynb  linear_vector_quantiel_regression.ipynb  linear_vector_quantile_regression.ipynb  metrics_analysis.ipynb  monge_gap_regularized_transport.ipynb  new_lvqr.ipynb  non_linear_vector_quantile_regression.ipynb  picnn_entropic_ot_quantile_regression.ipynb  sandbox.ipynb  synthetic_datasets.ipynb  visualize_datasets.ipynb  (+5 more)
(+267 files in other folders)
