[project]
name = "vector-quantile-regression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cartopy>=0.24.1",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.7",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pot>=0.9.5",
    "pyqt5>=5.15.11",
    "pyqt6>=6.9.1",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

[tool.uv]
package = true
